tests/macros/tests/ui/err/item-is-not-a-function.stderr
error: expected identifier
 --> tests/ui/err/item-is-not-a-function.rs:5:9
  |
5 | #[trace("test-span")]
  |         ^^^^^^^^^^^
